<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout style="@style/BackgroundPrimary">

        <LinearLayout
            android:id="@+id/linearLayout_activity_start_title"
            style="@style/LinearLayoutGlobalTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.205">

            <ImageView
                style="@style/ImageViewGlobalAppLogo"
                android:contentDescription="@string/app_logo_description" />

            <TextView
                style="@style/TextViewGlobalTitle"
                android:layout_marginTop="8dp" />

            <TextView
                style="@style/TextViewGlobalSubTitle"
                android:text="@string/login_en" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_activity_start_social_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tv_activity_start_login_email"
            app:layout_constraintStart_toStartOf="@id/tv_activity_start_login_email"
            app:layout_constraintTop_toBottomOf="@id/linearLayout_activity_start_title"
            app:layout_constraintVertical_bias="0.8">

            <ImageView
                android:id="@+id/button_activity_start_login_google"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/start_content_description_google_social_login"
                android:src="@drawable/img_start_google" />

            <ImageView
                android:id="@+id/button_activity_start_login_kakao"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/start_content_description_kakao_social_login"
                android:src="@drawable/img_start_kakao" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_activity_start_login_email"
            style="@style/TextViewHintPrimary"
            android:layout_marginTop="16dp"
            android:text="@string/start_login_with_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_activity_start_social_login_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>