<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout style="@style/BackgroundPrimary">

        <include
            android:id="@+id/include_activity_login_header"
            layout="@layout/include_constraint_login"/>

        <LinearLayout
            android:id="@+id/layout_activity_login_information"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="@id/include_activity_login_header"
            app:layout_constraintEnd_toEndOf="@id/guideline_activity_login_vertical_2"
            app:layout_constraintStart_toStartOf="@id/guideline_activity_login_vertical_1"
            app:layout_constraintBottom_toBottomOf="@id/include_activity_login_header">

            <EditText
                android:id="@+id/et_activity_login_email"
                style="@style/EditTextPrimary"
                android:layout_width="match_parent"
                android:hint="@string/login_hint_please_enter_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_activity_login_password"
                style="@style/EditTextPrimary"
                android:layout_width="match_parent"
                android:hint="@string/login_hint_please_enter_password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_activity_login_login"
                style="@style/ButtonPrimary"
                android:layout_width="match_parent"
                android:text="@string/login" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_activity_login_go_to_register"
            style="@style/TextViewHintPrimary"
            android:text="@string/login_is_kim_il_jeong_first_time_register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/layout_activity_login_information"
            app:layout_constraintStart_toStartOf="@id/layout_activity_login_information"
            app:layout_constraintTop_toBottomOf="@id/layout_activity_login_information" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_activity_login_vertical_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_activity_login_vertical_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>