<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout style="@style/BackgroundPrimary">

        <LinearLayout
            android:id="@+id/layout_activity_report_new_post_text_input"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/layout_activity_report_new_post_buttons"
            app:layout_constraintEnd_toEndOf="@id/guideline_activity_report_new_post_vertical_2"
            app:layout_constraintStart_toStartOf="@id/guideline_activity_report_new_post_vertical_1"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/TextViewHeaderSecondary"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="40dp"
                android:text="@string/do_report" />

            <EditText
                android:id="@+id/et_report_new_post_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/create_new_post_please_enter_title"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:maxLength="30"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_report_new_post_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/create_new_post_please_enter_content"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:maxEms="30"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_activity_report_new_post_buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_activity_report_new_post_vertical_2"
            app:layout_constraintStart_toStartOf="@id/guideline_activity_report_new_post_vertical_1"
            app:layout_constraintTop_toBottomOf="@id/layout_activity_report_new_post_text_input">

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_activity_post_report_select_schedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/surface_700"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

            </androidx.cardview.widget.CardView>

            <!-- TODO include layout으로 만들기 -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:minHeight="48dp">

                <TextView
                    android:id="@+id/btn_activity_report_new_post_cancel"
                    style="@style/TextViewCancelButtonPrimary"
                    android:layout_marginEnd="8dp"
                    android:text="@string/do_cancel"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_activity_report_new_post_create"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_activity_report_new_post_create"
                    style="@style/ButtonError"
                    android:layout_marginStart="8dp"
                    android:text="@string/do_report"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_activity_report_new_post_cancel"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_activity_report_new_post_vertical_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_activity_report_new_post_vertical_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>